Added login, register, list users and more..

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,9 +2,14 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Webshop</title>
+
 </head>
 <body>
 <h1>3D Prints web shop</h1>
 <a href="/products">View Products</a>
+<a href="/register">Register</a>
+<a href="/users">Current users from DB</a>
+<a href="/login">Log In</a>
+
 </body>
 </html>
