--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -2,12 +2,12 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
   <title th:text="${product.name}">Product Details</title>
-  <link rel="stylesheet" th:href="@{/css/styles.css}">
 </head>
 <body>
-<h2 th:text="${product.name}"></h2>
-<p th:text="${product.description}"></p>
-<p>Price: $<span th:text="${product.price}"></span></p>
-<a th:href="@{/products}">Back to Products</a>
+<h1 th:text="${product.name}">Product Name</h1>
+<p>Price: <span th:text="${product.price}">Product Price</span></p>
+<p>Description: <span th:text="${product.description}">Product Description</span></p>
+<a th:href="@{'/cart/add/' + ${product.id}}">Add to Cart</a>
+<a th:href="@{/products}">Back to Product List</a>
 </body>
 </html>
