--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" th:replace="layout :: content">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{fragments/layout}">
+
 <head>
-    <title>Products</title>
+    <title layout:fragment="title">Products</title>
 </head>
+
 <body>
-<h2>Our Products</h2>
-<div th:each="product : ${products}">
-    <h3 th:text="${product.name}"></h3>
-    <p th:text="${product.description}"></p>
-    <p>Price: $<span th:text="${product.price}"></span></p>
-    <form th:action="@{/cart/add}" method="post">
-        <input type="hidden" name="productId" th:value="${product.id}" />
-        <button type="submit">Add to Cart</button>
-    </form>
+<div layout:fragment="content">
+    <h1>Product List</h1>
+    <ul>
+        <li th:each="product : ${products}">
+            <span th:text="${product.name}">Product Name</span> -
+            <span th:text="${product.price}">Product Price</span>
+            <a th:href="@{'/products/view/' + ${product.id}}">View Details</a>
+            <a th:href="@{'/cart/add/' + ${product.id}}">Add to Cart</a>
+        </li>
+    </ul>
 </div>
 </body>
 </html>
